site pessoal concluido

--- a/sitePessoal/index.html
+++ b/sitePessoal/index.html
@@ -8,12 +8,12 @@
 <body>
 <header>
     <nav id="top-bar">
-        <div class="icon-container"><img class="icon" src="assets/images/users-2.png" alt=""><a href="#sobremim"><span>Sobre mim</span></a></div>
-        <div class="icon-container"><img class="icon" src="assets/images/help_question_mark-0.png" alt=""><a href="#curiosidades"><span>Curiosidades</span></a></div>
-        <div class="icon-container"><img class="icon" src="assets/images/address_book-0.png" alt=""><a href="#educacao"><span>Educação</span></a></div>
-        <div class="icon-container"><img class="icon" src="assets/images/directory_open_file_mydocs-5.png" alt=""><a href="#causos"><span>Causos</span></a></div>
-        <div class="icon-container"><img class="icon" src="assets/images/joystick-5.png" alt=""><a href="#habilidades"><span>Habilidades</span></a></div>
-        <div class="icon-container"><img class="icon" src="assets/images/address_book_pad.png" alt=""><a href="#contato"><span>Contato</span></a></div>
+        <div class="icon-container"><a href="#sobremim"><img class="icon" src="assets/images/users-2.png" alt=""></a><a href="#sobremim"><span>Sobre mim</span></a></div>
+        <div class="icon-container"><a href="#curiosidades"><img class="icon" src="assets/images/help_question_mark-0.png" alt=""></a><a href="#curiosidades"><span>Curiosidades</span></a></div>
+        <div class="icon-container"><a href="#educacao"><img class="icon" src="assets/images/address_book-0.png" alt=""></a><a href="#educacao"><span>Educação</span></a></div>
+        <div class="icon-container"><a href="#causos"><img class="icon" src="assets/images/directory_open_file_mydocs-5.png" alt=""></a><a href="#causos"><span>Causos</span></a></div>
+        <div class="icon-container"><a href="#habilidades"><img class="icon" src="assets/images/joystick-5.png" alt=""></a><a href="#habilidades"><span>Habilidades</span></a></div>
+        <div class="icon-container"><a href="#contato"><img class="icon" src="assets/images/address_book_pad.png" alt=""></a><a href="#contato"><span>Contato</span></a></div>
     </nav>
 </header>
 <main>
@@ -130,81 +130,273 @@
                 <img class="window-icon" src="assets/images/close-icon.png" alt="">
             </div>
         </div>
+        <div class="menu-bar">
+            <span>Arquivo</span>
+            <span>Editar</span>
+            <span>Ver</span>
+            <span>Inserir</span>
+            <span>Formatar</span>
+            <span>Ferramentas</span>
+            <span>Dados</span>
+            <span>Arquivo</span>
+            <span>Ajuda</span>
+        </div>
         <table>
             <thead>
                 <tr>
-                    <th>Ano</th>
-                    <th>Escola</th>
+                    <th class="num"></th>
+                    <th class="letters">A</th>
+                    <th class="letters">B</th>
+                    <th class="letters">C</th>
+                    <th class="letters">D</th>
+                    <th class="letters">E</th>
+                    <th class="letters">F</th>
+                    <th class="letters">G</th>
+                    <th class="letters">H</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
+                    <td class="num">1</td>
+                    <td>Ano</td>
+                    <td>Escola</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="num">2</td>
                     <td>2007</td>
-                    <td>SECAT</td>
+                    <td>Secat</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">3</td>
                     <td>2008</td>
-                    <td>SECAT</td>
+                    <td>Secat</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">4</td>
                     <td>2009</td>
-                    <td>SECAT</td>
+                    <td>Secat</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">5</td>
                     <td>2010</td>
-                    <td>SECAT</td>
+                    <td>Secat</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">6</td>
                     <td>2011</td>
-                    <td>SECAT</td>
+                    <td>Secat</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">7</td>
                     <td>2012</td>
                     <td>Colégio Santa Águeda</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">8</td>
                     <td>2013</td>
                     <td>Colégio Santa Águeda</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">9</td>
                     <td>2014</td>
                     <td>Colégio Santa Águeda</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">10</td>
                     <td>2015</td>
-                    <td>Colégio Santa Águeda</td>
+                    <td>C.S.A</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">11</td>
                     <td>2016</td>
-                    <td>Colégio Santa Águeda</td>
+                    <td>C.S.A</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">12</td>
                     <td>2017</td>
                     <td>Escola Municipal Dr. Sadi Mendes</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">13</td>
                     <td>2018</td>
                     <td>Escola Municipal Dr. Júlio Senna</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">14</td>
                     <td>2019</td>
                     <td>Escola Estadual Barão de Ceará-Mirim</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">15</td>
                     <td>2020</td>
                     <td>Escola Estadual Monsenhor Celco Cicco</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">16</td>
                     <td>2021</td>
                     <td>IFRN - Ceará-Mirim</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">17</td>
                     <td>2022</td>
                     <td>IFRN - Ceará-Mirim</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
+                    <td class="num">18</td>
                     <td>2023</td>
                     <td>IFRN - Ceará-Mirim</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="num">19</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="num">20</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="num">21</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="num">22</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
             </tbody>
         </table>
@@ -216,6 +408,12 @@
                 <img class="window-icon" src="assets/images/question-icon.png" alt="">
                 <img class="window-icon" src="assets/images/close-icon.png" alt="">
             </div>
+        </div>
+        <div class="menu-bar">
+            <span>Arquivo</span>
+            <span>Editar</span>
+            <span>Procurar</span>
+            <span>Ajuda</span>
         </div>
         <div class="window-content">
             <article>
@@ -232,11 +430,17 @@
                 <img class="window-icon" src="assets/images/close-icon.png" alt="">
             </div>
         </div>
+        <div class="menu-bar">
+            <span>Organizar</span>
+            <span>Propriedades do sistema</span>
+            <span>Alterar ou desinstalar um programa</span>
+            <span>>></span>
+        </div>
         <div class="window-content">
             <div class="icon-container"><img class="icon" src="assets/images/console_prompt-0.png" alt=""><span>Programação</span></div>
             <div class="icon-container"><img class="icon" src="assets/images/check-0.png" alt=""><span>Resoluçao de problemas</span></div>
             <div class="icon-container"><img class="icon" src="assets/images/chart1-5.png" alt=""><span>Matemática</span></div>
-            <div class="icon-container"><img class="icon" src="assets/images/clock-1.png" alt=""><span>Trabalhar sob pressão</span></div>
+            <div class="icon-container"><img class="icon" src="assets/images/clock-1.png" alt=""><span>Trabalhar bem sob pressão</span></div>
         </div>
     </section>
 </main>
